<resources>
    <string name="app_name">Food Order App</string>
    <string name="FoodName">Burger King</string>
    <string name="place">Rajagiriya</string>
    <string name="name">Preparing Your Order</string>
    <string name="Orderid">Order Id : 13500</string>
    <string name="arrival">Estimate Arrival : 10.10am</string>
    <string name="ShipId">Shipping ID : 158</string>
    <string name="ShID">Shipper ID : 20</string>
    <string name="Shipname">Ashen</string>
    <string name="ShipName">Shipper Name : Ashen</string>
    <string name="fdName">Chicken Burger         1</string>
    <string name="Sum">Total          Rs.195.00</string>
    <string name="btn">CONFIRM</string>
    <string name="btn2">TRACK</string>
    <string name="TabName">Order Details</string>
    <string name="btn3">CREATE NEW SHIPPER</string>
    <string name="btn4">VIEW SHIPPER DETAILS</string>
    <string name="TabName2">Shippers Management</string>
    <string name="Name">Name</string>
    <string name="contact">Contact Number</string>
    <string name="password">Password</string>
    <string name="btn5">REGISTER</string>
    <string name="TabName3">Create Shipper</string>
    <string name="TabName5">Checkout</string>
    <string name="price">Rs. 50.20</string>
    <string name="quantity">Quantity + 1</string>
    <string name="nme">Shopping Address</string>
    <string name="userName">Oshani Vinodya</string>
    <string name="address">Wagampitiya, Balangoda</string>
    <string name="contctNo">0773274251</string>
    <string name="Shipcost">Shipping Cost    Rs.20.00</string>
    <string name="Total">Total     Rs.70.20</string>
    <string name="tabName5">Shopping Cart</string>
    <string name="foodName2">Egg Sausage Burger</string>
    <string name="price2">Rs. 100.00</string>
    <string name="btn6">CONTINUE</string>
    <string name="description">chicken</string>
    <string name="Descri">egg</string>
</resources>
