<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FB46"
    tools:context=".SubmitOrder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E61F1F"
            android:text="@string/TabName"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#FFFFFF">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="310dp"
            android:layout_height="151dp"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/burger"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-48dp"
            tools:layout_editor_absoluteY="146dp"
            tools:srcCompat="@drawable/burger" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="174dp"
            android:layout_height="52dp"
            android:text="@string/FoodName"
            android:textColor="#D31B59"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="222dp"
            tools:layout_editor_absoluteY="158dp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textColor="#191818"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="255dp"
            tools:layout_editor_absoluteY="203dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="241dp"
            android:layout_height="38dp"
            android:text="@string/Orderid"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="390dp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="367dp"
            android:layout_height="70dp"
            android:text="@string/arrival"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="428dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="314dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#90F619"
            android:text="@string/btn2"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="288dp"
            tools:layout_editor_absoluteY="386dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="248dp"
            android:layout_height="51dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/fdName"
            android:textColor="#262726"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="559dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="249dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Sum"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="621dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="161dp"
            android:layout_height="40dp"
            android:background="#151515"
            android:text="@string/btn"
            android:textColor="#E91E63"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="667dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ShID"
            android:textColor="#03A9F4"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="473dp" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ShipName"
            android:textColor="#03A9F4"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="514dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>