<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b2"
    tools:context=".Checkout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:background="#171616"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="117dp"
            android:text="@string/TabName5"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="36sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="213dp"
            android:layout_height="157dp"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/osha"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="134dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fdName"
            android:textColor="#E81515"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="220dp"
            tools:layout_editor_absoluteY="187dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="#201F1F"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="238dp"
            tools:layout_editor_absoluteY="219dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="#191717"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="238dp"
            tools:layout_editor_absoluteY="259dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/nme"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="22dp"
            tools:layout_editor_absoluteY="311dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textColor="#D715F8"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="380dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#D916FA"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="425dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contctNo"
            android:textColor="#CD1BEC"
            android:textSize="24sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="466dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="353dp"
            android:layout_height="35dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="25dp"
            tools:layout_editor_absoluteY="485dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Shipcost"
            android:textColor="#EACC0D"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="537dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total"
            android:textColor="#131213"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="585dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="285dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#1C1C1B"
            android:text="@string/btn"
            android:textColor="#ED0956"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.553"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="645dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>