<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app"
    tools:context=".CreateShipper">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EC3131"
            android:text="@string/TabName3"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            android:textColor="#FDFDFA"
            android:textColorHighlight="#1C1B1B"
            android:textColorLink="#C58888"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="241dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/contact"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="376dp" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="518dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="171dp"
            android:layout_height="59dp"
            android:background="#1B1A1A"
            android:text="@string/btn5"
            android:textColor="#E91E63"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="629dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>